--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,9 @@
 version: 2.1
 jobs:
   build:
+    # pre-built images: https://circleci.com/docs/2.0/circleci-images/
     docker:
-      - image: alpine:3.7
+      - image: circleci/node:10-browsers
     steps:
       - checkout
       - run:
@@ -10,13 +11,15 @@ jobs:
           command: |
             echo 'Hello World!'
             echo 'This is the delivery pipeline'
-
       - run:
           name: Code Has Arrived
           command: |
             ls -al
             echo '^^^That should look familiar^^^'
-
+      - run:
+          name: Running in a Unique Container
+          command: |
+            node -v
 
 
 
