--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,20 +6,9 @@ jobs:
       - image: circleci/node:10-browsers
     steps:
       - checkout
-      - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
-      - run:
-          name: Code Has Arrived
-          command: |
-            ls -al
-            echo '^^^That should look familiar^^^'
-      - run:
-          name: Running in a Unique Container
-          command: |
-            node -v
+      - run: npm install
+      - run: npm test
+        
 
 
 
